--- a/app/src/main/res/layout/fragment_edit_wallet.xml
+++ b/app/src/main/res/layout/fragment_edit_wallet.xml
@@ -136,7 +136,7 @@
         android:clickable="true"
         android:minWidth="150dp"
         app:cardBackgroundColor="@color/cards_bg_color"
-        app:cardCornerRadius="18dp"
+        app:cardCornerRadius="@dimen/main_cards_corner_radius"
         app:strokeWidth="0dp">
 
         <RelativeLayout
