--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -59,7 +59,7 @@
             android:layout_marginStart="18dp"
             android:layout_marginEnd="18dp"
             android:layout_marginBottom="18dp"
-            app:cardCornerRadius="18dp"
+            app:cardCornerRadius="@dimen/main_cards_corner_radius"
             app:strokeWidth="0dp">
 
             <RelativeLayout
@@ -327,7 +327,7 @@
                         android:layout_marginTop="4dp"
                         android:clickable="true"
                         android:transitionName="barChartCard"
-                        app:cardCornerRadius="18dp"
+                        app:cardCornerRadius="@dimen/main_cards_corner_radius"
                         app:strokeWidth="0dp">
 
                         <RelativeLayout
@@ -389,7 +389,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginTop="4dp"
                         app:cardBackgroundColor="@color/cards_bg_color"
-                        app:cardCornerRadius="18dp"
+                        app:cardCornerRadius="@dimen/main_cards_corner_radius"
                         app:strokeWidth="0dp">
 
                         <RelativeLayout
@@ -482,7 +482,7 @@
                     android:layout_marginTop="4dp"
                     android:clickable="true"
                     android:transitionName="pieChartCard"
-                    app:cardCornerRadius="18dp"
+                    app:cardCornerRadius="@dimen/main_cards_corner_radius"
                     app:strokeWidth="0dp">
 
                     <RelativeLayout
