--- a/app/src/main/res/layout/item_invitation.xml
+++ b/app/src/main/res/layout/item_invitation.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="14dp"
     app:cardBackgroundColor="@color/cards_bg_color"
-    app:cardCornerRadius="18dp"
+    app:cardCornerRadius="@dimen/main_cards_corner_radius"
     app:strokeWidth="0dp"
     tools:ignore="HardcodedText">
 
@@ -19,7 +19,7 @@
             android:id="@+id/invitationPersonImage"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_alignParentStart="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginStart="8dp"
             android:contentDescription="@string/user_profile_picture"
             android:src="@drawable/ic_baseline_person_24" />
@@ -28,30 +28,30 @@
             android:id="@+id/invDetailsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/invitationPersonImage"
+            android:layout_below="@id/invitationPersonImage"
             android:orientation="vertical">
 
             <TextView
+                android:layout_gravity="center_horizontal"
                 android:id="@+id/invitationPersonName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 tools:text="Person Name" />
 
             <TextView
+                android:layout_gravity="center_horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
                 android:text="has invited you to be a partner to their wallet"
                 android:textSize="11sp" />
 
             <TextView
+                android:layout_gravity="center_horizontal"
                 android:id="@+id/walletTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
                 android:textSize="12sp"
                 android:textStyle="bold|italic"
                 tools:text="Wallet Title" />
@@ -66,9 +66,9 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
-            <com.google.android.material.chip.Chip
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/acceptChip"
-                style="@style/Widget.Material3.Chip.Assist"
+                style="@style/Widget.Material3.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="28dp"
                 android:layout_marginEnd="38dp"
@@ -77,15 +77,16 @@
                 android:clickable="true"
                 android:elevation="0dp"
                 android:focusable="true"
+                android:padding="0dp"
                 android:text="Accept"
                 app:chipBackgroundColor="@color/chip_card_bg_color"
                 app:chipIcon="@drawable/ic_round_check_24"
                 app:chipMinTouchTargetSize="0dp"
                 app:chipStrokeWidth="0dp" />
 
-            <com.google.android.material.chip.Chip
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/declineChip"
-                style="@style/Widget.Material3.Chip.Assist"
+                style="@style/Widget.Material3.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="28dp"
                 android:checkable="true"
@@ -93,6 +94,7 @@
                 android:clickable="true"
                 android:elevation="0dp"
                 android:focusable="true"
+                android:padding="0dp"
                 android:text="Decline"
                 app:chipBackgroundColor="@color/chip_card_bg_color"
                 app:chipIcon="@drawable/ic_round_do_not_disturb_alt_24"
