--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -9,7 +9,7 @@
     android:layout_marginEnd="18dp"
     android:clickable="true"
     app:cardBackgroundColor="@color/cards_bg_color"
-    app:cardCornerRadius="18dp"
+    app:cardCornerRadius="@dimen/main_cards_corner_radius"
     app:strokeWidth="0dp">
 
     <RelativeLayout
