--- a/app/src/main/res/layout/item_wallet.xml
+++ b/app/src/main/res/layout/item_wallet.xml
@@ -7,7 +7,7 @@
     android:layout_marginBottom="8dp"
     android:clickable="true"
     app:cardBackgroundColor="@color/cards_bg_color"
-    app:cardCornerRadius="18dp"
+    app:cardCornerRadius="@dimen/main_cards_corner_radius"
     app:strokeWidth="0dp">
 
     <RelativeLayout
