--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -545,7 +545,7 @@
         app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/emptyTransactions"
+        android:id="@+id/openBankFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -554,8 +554,8 @@
         android:layout_marginStart="18dp"
         android:layout_marginBottom="22dp"
         android:contentDescription="@string/add_conversation_button"
-        android:src="@drawable/ic_round_delete_24"
-        android:visibility="gone"
+        android:src="@drawable/ic_baseline_local_atm_24"
+        android:visibility="visible"
         app:fabSize="normal"
         app:layout_anchorGravity="bottom|start"
         app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />
