impl delete all requisitions for test

--- a/app/src/main/res/layout/fragment_connect_to_bank.xml
+++ b/app/src/main/res/layout/fragment_connect_to_bank.xml
@@ -64,4 +64,21 @@
         tools:itemCount="5"
         tools:listitem="@layout/item_bank" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/deleteRequisitionsFab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom|end"
+            android:layout_marginStart="18dp"
+            android:layout_marginBottom="22dp"
+            android:contentDescription="@string/add_conversation_button"
+            android:src="@drawable/ic_round_delete_24"
+            android:visibility="visible"
+            app:fabSize="normal"
+            app:layout_anchorGravity="bottom|start"
+            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />
+
+
 </RelativeLayout>
