--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -216,6 +216,7 @@
                     app:chipBackgroundColor="@color/home_chip_bg_color"
                     app:chipIcon="@drawable/ic_round_edit_24"
                     app:chipIconEnabled="true"
+                    app:chipIconTint="@color/sharedIconTintColor"
                     app:chipMinTouchTargetSize="0dp"
                     app:chipStrokeWidth="0dp" />
 
@@ -236,6 +237,7 @@
                     app:chipBackgroundColor="@color/home_chip_bg_color"
                     app:chipIcon="@drawable/ic_baseline_local_atm_24"
                     app:chipIconEnabled="true"
+                    app:chipIconTint="@color/sharedIconTintColor"
                     app:chipMinTouchTargetSize="0dp"
                     app:chipStrokeWidth="0dp" />
 
@@ -564,20 +566,20 @@
         app:layout_anchorGravity="bottom|end"
         app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />
 
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/openBankFab"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignParentStart="true"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_gravity="bottom|end"-->
-<!--        android:layout_marginStart="18dp"-->
-<!--        android:layout_marginBottom="22dp"-->
-<!--        android:contentDescription="@string/add_conversation_button"-->
-<!--        android:src="@drawable/ic_baseline_local_atm_24"-->
-<!--        android:visibility="visible"-->
-<!--        app:fabSize="normal"-->
-<!--        app:layout_anchorGravity="bottom|start"-->
-<!--        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />-->
+    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+    <!--        android:id="@+id/openBankFab"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_alignParentStart="true"-->
+    <!--        android:layout_alignParentBottom="true"-->
+    <!--        android:layout_gravity="bottom|end"-->
+    <!--        android:layout_marginStart="18dp"-->
+    <!--        android:layout_marginBottom="22dp"-->
+    <!--        android:contentDescription="@string/add_conversation_button"-->
+    <!--        android:src="@drawable/ic_baseline_local_atm_24"-->
+    <!--        android:visibility="visible"-->
+    <!--        app:fabSize="normal"-->
+    <!--        app:layout_anchorGravity="bottom|start"-->
+    <!--        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />-->
 
 </RelativeLayout>
