--- a/app/src/main/res/layout/fragment_b_account_details.xml
+++ b/app/src/main/res/layout/fragment_b_account_details.xml
@@ -61,79 +61,94 @@
                 app:cardBackgroundColor="@color/bar_details_chip_state_list"
                 app:strokeWidth="0dp">
 
-                <LinearLayout
-                    android:id="@+id/accDetails"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginEnd="24dp"
-                    android:orientation="vertical"
-                    android:padding="18dp">
+                    android:layout_height="wrap_content">
+
+
+                    <com.facebook.shimmer.ShimmerFrameLayout
+                        android:id="@+id/detailsShimer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <include layout="@layout/placeholder_bank_acc_details_shimmer" />
+                    </com.facebook.shimmer.ShimmerFrameLayout>
 
                     <LinearLayout
+                        android:id="@+id/accDetails"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        tools:ignore="UseCompoundDrawables">
+                        android:layout_marginStart="24dp"
+                        android:layout_marginEnd="24dp"
+                        android:orientation="vertical"
+                        android:padding="18dp"
+                        android:visibility="invisible">
 
-                        <ImageView
-                            android:id="@+id/accBankImage"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:contentDescription="@string/bank_logo"
-                            tools:src="@drawable/ic_baseline_local_atm_24" />
-
-                        <TextView
-                            android:id="@+id/accBankName"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="24dp"
-                            android:layout_marginEnd="24dp"
+                            android:orientation="horizontal"
+                            tools:ignore="UseCompoundDrawables">
+
+                            <ImageView
+                                android:id="@+id/accBankImage"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:contentDescription="@string/bank_logo"
+                                tools:src="@drawable/ic_baseline_local_atm_24" />
+
+                            <TextView
+                                android:id="@+id/accBankName"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="24dp"
+                                android:layout_marginEnd="24dp"
+                                android:maxWidth="210dp"
+                                android:maxLines="1"
+                                android:textSize="24sp"
+                                android:textStyle="bold"
+                                tools:text="ING" />
+                        </LinearLayout>
+
+                        <TextView
+                            android:id="@+id/accIBAN"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
                             android:maxWidth="210dp"
                             android:maxLines="1"
-                            android:textSize="24sp"
+                            android:textSize="14sp"
                             android:textStyle="bold"
-                            tools:text="ING" />
+                            tools:text="IBAN1234567891234567" />
+
+                        <LinearLayout
+                            android:id="@+id/accBalanceLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/accCurrency"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:maxLines="1"
+                                android:textSize="20sp"
+                                tools:text="lei" />
+
+                            <TextView
+                                android:id="@+id/accAmount"
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="8dp"
+                                android:maxLines="1"
+                                android:textSize="20sp"
+                                tools:text="13020.00" />
+                        </LinearLayout>
+
                     </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/accIBAN"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:maxWidth="210dp"
-                        android:maxLines="1"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        tools:text="IBAN1234567891234567" />
-
-                    <LinearLayout
-                        android:id="@+id/accBalanceLayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/accCurrency"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:maxLines="1"
-                            android:textSize="20sp"
-                            tools:text="lei" />
-
-                        <TextView
-                            android:id="@+id/accAmount"
-                            android:layout_width="100dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:maxLines="1"
-                            android:textSize="20sp"
-                            tools:text="13020.00" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
+                </RelativeLayout>
             </com.google.android.material.card.MaterialCardView>
 
             <androidx.recyclerview.widget.RecyclerView
