--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -21,6 +21,7 @@
             android:id="@+id/transactionTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Title not provided"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="Transaction Title " />
@@ -35,7 +36,7 @@
             android:src="@drawable/ic_baseline_person_24" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/transactionTitle"
             android:layout_marginStart="12dp"
@@ -55,6 +56,7 @@
                 android:id="@+id/transactionDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Date not provided"
                 android:textSize="10sp"
                 tools:text="Fri, Aug 12, 15:48" />
         </LinearLayout>
@@ -82,6 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:text="Category not provided"
                 android:textSize="12sp"
                 tools:text="Transport" />
         </LinearLayout>
