--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -35,10 +35,11 @@
 
     <style name="DialogTheme" parent="MaterialAlertDialog.Material3">
         <!--selected day-->
-        <item name="android:colorControlActivated">@android:color/system_accent1_200</item>
+        <item name="android:colorControlActivated">@color/material_dynamic_primary99</item>
         <!--days of the month-->
-        <item name="android:textColorPrimary">@android:color/system_accent1_500</item>
+        <item name="android:textColorPrimary">@android:color/system_neutral1_500</item>
         <!--days of the week-->
-        <item name="android:textColorSecondary">@android:color/system_neutral2_500</item>
+        <item name="android:textColorSecondary">@color/material_dynamic_primary60</item>
     </style>
+
 </resources>
